--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,11 @@ const personalInfo = {
   host: "me",
   bio: "full-stack dev & team lead • .net enthusiast • making things work for 5+ years",
   links: [
-    { name: "resume.pdf", icon: "carbon:document-pdf", url: "#" },
-    { name: "linkedin", icon: "carbon:logo-linkedin", url: "#" },
-    { name: "blog", icon: "carbon:blog", url: "#" },
-    { name: "github", icon: "carbon:logo-github", url: "#" },
-    { name: "gitlab", icon: "carbon:logo-gitlab", url: "#" },
+    { name: "resume.pdf", icon: "carbon:document-pdf", url: "https://resume.francescozorzi.me" },
+    { name: "linkedin", icon: "carbon:logo-linkedin", url: "https://www.linkedin.com/in/francesco-zorzi/" },
+    { name: "blog", icon: "carbon:blog", url: "https://cialtr.one/" },
+    { name: "github", icon: "carbon:logo-github", url: "https://github.com/c4mbr0nn3" },
+    { name: "gitlab", icon: "carbon:logo-gitlab", url: "https://gitlab.com/j1mm0" },
   ],
 };
 
