update SEO image URLs to use external source

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,14 +47,14 @@ const seo = {
     description:
       "Software Engineer with 5+ years building .NET applications and leading development teams.",
     url: "https://francescozorzi.me",
-    image: "/og-image.png",
+    image: "https://picsum.photos/id/257/1200/630",
   },
   twitter: {
     card: "summary_large_image",
     title: "Francesco Zorzi | Software Engineer",
     description:
       "Software Engineer with 5+ years building .NET applications and leading development teams.",
-    image: "/og-image.png",
+    image: "https://picsum.photos/id/257/1200/630",
   },
 };
 ---
