update image URLs in SEO metadata to include file extension

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,14 +47,14 @@ const seo = {
     description:
       "Software Engineer with 5+ years building .NET applications and leading development teams.",
     url: "https://francescozorzi.me",
-    image: "https://picsum.photos/id/257/1200/630",
+    image: "https://picsum.photos/id/257/1200/630.jpg",
   },
   twitter: {
     card: "summary_large_image",
     title: "Francesco Zorzi | Software Engineer",
     description:
       "Software Engineer with 5+ years building .NET applications and leading development teams.",
-    image: "https://picsum.photos/id/257/1200/630",
+    image: "https://picsum.photos/id/257/1200/630.jpg",
   },
 };
 ---
