--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,6 +86,25 @@ const seo = {
     <meta name="twitter:title" content={seo.twitter.title} />
     <meta name="twitter:description" content={seo.twitter.description} />
     <meta name="twitter:image" content={seo.twitter.image} />
+
+    <!-- Privacy-friendly analytics by Plausible -->
+    <script
+      async
+      src="https://analytics.zorygo.ovh/js/pa-rZeXMBjHeyBgH948AJs7u.js"
+    ></script>
+    <script>
+      ((window.plausible =
+        window.plausible ||
+        function () {
+          (plausible.q = plausible.q || []).push(arguments);
+        }),
+        (plausible.init =
+          plausible.init ||
+          function (i) {
+            plausible.o = i || {};
+          }));
+      plausible.init();
+    </script>
   </head>
   <body
     class="bg-tokyo-bg text-tokyo-fg flex min-h-screen items-center justify-center font-mono"
